syntax = "proto3";

package marketLedgerGrpc;


service MarketLedgerService {
  rpc CreateInvoice (CreateInvoiceReq) returns (CreateInvoiceResp) {
  }

}

message Invoice {
  int32 id = 1;
  string number = 2;
  string description = 3;
  float face_value = 4;
  int32 issuer_id = 5;
}

message SellOrder {
  int32 id = 1;
  Invoice invoice = 2;
  float seller_wants = 4;
}


message CreateInvoiceReq {
  SellOrder sell_order = 2;
}

message CreateInvoiceResp {
  SellOrder sell_order = 1;
  Error error = 2;
}

message Error {
  string code = 1;
  string message = 2;
}
